Started the introduction

--- a/text/introduction.tex
+++ b/text/introduction.tex
@@ -1,3 +1,7 @@
 \section{Introduction}
 \label{sec:intro}
-Your text comes here. 
+On a globalised market, organisations need to be efficient and effective at conducting their business processes. Business process management technologies like process mining help to relate operational execution data to business processes. Process mining allows us to discover models representing the observed behaviour, and helps us to gain insights into the performance of processes, and conformance to specified process models \cite{DBLP:books/sp/Aalst16}.
+
+To establish a relation between execution data and process models is a complex and challenging research problem, and many aspects of this relationship have been studied. For example, Baier et al. investigate the challenge of a mismatch in abstraction levels~\cite{DBLP:journals/is/0001MW14},
+
+During execution of business processes---supported by the ubiquity of sensing technologies---large amounts of data can be generated. 
