--- a/main.tex
+++ b/main.tex
@@ -45,12 +45,12 @@
 %
 \begin{document}
 
-\title{Insert your title here
+\title{Duplicate Label Disambiguation in Process Mining
 %\thanks{Grants or other notes
 %about the article that should go on the front page should be
 %placed here. General acknowledgments should be placed at the end of the article.}
 }
-\subtitle{Do you have a subtitle?\\ If so, write it here}
+%\subtitle{Do you have a subtitle?\\ If so, write it here}
 
 %\titlerunning{Short form of title}        % if too long for running head
 
