--- a/refs.bib
+++ b/refs.bib
@@ -1,13 +1,28 @@
-@article{SenderovichWGM15,
-  author    = {Arik Senderovich and Matthias Weidlich and Avigdor Gal and Avishai Mandelbaum},
-  title     = {Queue mining for delay prediction in multi-class service processes},
-  journal   = {Inf. Syst.},
-  volume    = {53},
-  pages     = {278--295},
-  year      = {2015},
-  url       = {http://dx.doi.org/10.1016/j.is.2015.03.010},
-  doi       = {10.1016/j.is.2015.03.010},
-  timestamp = {Thu, 09 Jul 2015 19:53:38 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/is/SenderovichWGM15},
+@book{DBLP:books/sp/Aalst16,
+  author    = {Wil M. P. van der Aalst},
+  title     = {Process Mining - Data Science in Action, Second Edition},
+  publisher = {Springer},
+  year      = {2016},
+  url       = {http://dx.doi.org/10.1007/978-3-662-49851-4},
+  doi       = {10.1007/978-3-662-49851-4},
+  isbn      = {978-3-662-49850-7},
+  timestamp = {Mon, 18 Apr 2016 17:08:05 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/books/sp/Aalst16},
   bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{DBLP:journals/is/0001MW14,
+	author    = {Thomas Baier and
+	Jan Mendling and
+	Mathias Weske},
+	title     = {Bridging abstraction layers in process mining},
+	journal   = {Inf. Syst.},
+	volume    = {46},
+	pages     = {123--139},
+	year      = {2014},
+	url       = {http://dx.doi.org/10.1016/j.is.2014.04.004},
+	doi       = {10.1016/j.is.2014.04.004},
+	timestamp = {Tue, 22 Jul 2014 13:16:49 +0200},
+	biburl    = {http://dblp.uni-trier.de/rec/bib/journals/is/0001MW14},
+	bibsource = {dblp computer science bibliography, http://dblp.org}
 }
