--- a/text/abstract.tex
+++ b/text/abstract.tex
@@ -1,4 +1,6 @@
 \begin{abstract}
+To be done at the end.
+
 Insert your abstract here. Include keywords, PACS and mathematical
 subject classification numbers as needed.
 \keywords{First keyword \and Second keyword \and More}
