working on the intro

--- a/refs.bib
+++ b/refs.bib
@@ -1,3 +1,19 @@
+@book{DBLP:books/daglib/0031128,
+	author    = {Marlon Dumas and
+	Marcello La Rosa and
+	Jan Mendling and
+	Hajo A. Reijers},
+	title     = {Fundamentals of Business Process Management},
+	publisher = {Springer},
+	year      = {2013},
+	url       = {http://dx.doi.org/10.1007/978-3-642-33143-5},
+	doi       = {10.1007/978-3-642-33143-5},
+	isbn      = {978-3-642-33142-8},
+	timestamp = {Fri, 11 Dec 2015 18:49:34 +0100},
+	biburl    = {http://dblp.uni-trier.de/rec/bib/books/daglib/0031128},
+	bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
 @book{DBLP:books/sp/Aalst16,
   author    = {Wil M. P. van der Aalst},
   title     = {Process Mining - Data Science in Action, Second Edition},
@@ -9,6 +25,21 @@
   timestamp = {Mon, 18 Apr 2016 17:08:05 +0200},
   biburl    = {http://dblp.uni-trier.de/rec/bib/books/sp/Aalst16},
   bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{DBLP:journals/topnoc/Carmona12,
+	author    = {Josep Carmona},
+	title     = {The Label Splitting Problem},
+	journal   = {Trans. Petri Nets and Other Models of Concurrency},
+	volume    = {6},
+	pages     = {1--23},
+	year      = {2012},
+	crossref  = {DBLP:journals/topnoc/2012-6},
+	url       = {http://dx.doi.org/10.1007/978-3-642-35179-2_1},
+	doi       = {10.1007/978-3-642-35179-2_1},
+	timestamp = {Fri, 11 Mar 2016 12:11:24 +0100},
+	biburl    = {http://dblp.uni-trier.de/rec/bib/journals/topnoc/Carmona12},
+	bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 @article{DBLP:journals/is/0001MW14,
@@ -24,5 +55,114 @@
 	doi       = {10.1016/j.is.2014.04.004},
 	timestamp = {Tue, 22 Jul 2014 13:16:49 +0200},
 	biburl    = {http://dblp.uni-trier.de/rec/bib/journals/is/0001MW14},
+	bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{DBLP:conf/bpm/LuFBA16,
+	author    = {Xixi Lu and
+	Dirk Fahland and
+	Frank J. H. M. van den Biggelaar and
+	Wil M. P. van der Aalst},
+	title     = {Handling Duplicated Tasks in Process Discovery by Refining Event Labels},
+	booktitle = {Business Process Management - 14th International Conference, {BPM}
+	2016, Rio de Janeiro, Brazil, September 18-22, 2016. Proceedings},
+	pages     = {90--107},
+	year      = {2016},
+	crossref  = {DBLP:conf/bpm/2016},
+	url       = {http://dx.doi.org/10.1007/978-3-319-45348-4\_6},
+	doi       = {10.1007/978-3-319-45348-4\_6},
+	timestamp = {Tue, 20 Sep 2016 09:39:38 +0200},
+	biburl    = {http://dblp.uni-trier.de/rec/bib/conf/bpm/LuFBA16},
+	bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@proceedings{DBLP:conf/bpm/2016,
+	editor    = {Marcello La Rosa and
+	Peter Loos and
+	Oscar Pastor},
+	title     = {Business Process Management - 14th International Conference, {BPM}
+	2016, Rio de Janeiro, Brazil, September 18-22, 2016. Proceedings},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {9850},
+	publisher = {Springer},
+	year      = {2016},
+	url       = {http://dx.doi.org/10.1007/978-3-319-45348-4},
+	doi       = {10.1007/978-3-319-45348-4},
+	isbn      = {978-3-319-45347-7},
+	timestamp = {Tue, 20 Sep 2016 09:34:17 +0200},
+	biburl    = {http://dblp.uni-trier.de/rec/bib/conf/bpm/2016},
+	bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{DBLP:conf/bpm/PedroC16,
+	author    = {Javier de San Pedro and
+	Jordi Cortadella},
+	title     = {Discovering Duplicate Tasks in Transition Systems for the Simplification
+	of Process Models},
+	booktitle = {Business Process Management - 14th International Conference, {BPM}
+	2016, Rio de Janeiro, Brazil, September 18-22, 2016. Proceedings},
+	pages     = {108--124},
+	year      = {2016},
+	crossref  = {DBLP:conf/bpm/2016},
+	url       = {http://dx.doi.org/10.1007/978-3-319-45348-4\_7},
+	doi       = {10.1007/978-3-319-45348-4\_7},
+	timestamp = {Tue, 20 Sep 2016 09:39:38 +0200},
+	biburl    = {http://dblp.uni-trier.de/rec/bib/conf/bpm/PedroC16},
+	bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{DBLP:conf/bpm/MannhardtLRAT16,
+	author    = {Felix Mannhardt and
+	Massimiliano de Leoni and
+	Hajo A. Reijers and
+	Wil M. P. van der Aalst and
+	Pieter J. Toussaint},
+	title     = {From Low-Level Events to Activities - {A} Pattern-Based Approach},
+	booktitle = {Business Process Management - 14th International Conference, {BPM}
+	2016, Rio de Janeiro, Brazil, September 18-22, 2016. Proceedings},
+	pages     = {125--141},
+	year      = {2016},
+	crossref  = {DBLP:conf/bpm/2016},
+	url       = {http://dx.doi.org/10.1007/978-3-319-45348-4\_8},
+	doi       = {10.1007/978-3-319-45348-4\_8},
+	timestamp = {Tue, 20 Sep 2016 09:39:38 +0200},
+	biburl    = {http://dblp.uni-trier.de/rec/bib/conf/bpm/MannhardtLRAT16},
+	bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{DBLP:conf/caise/SenderovichRGMM16,
+	author    = {Arik Senderovich and
+	Andreas Rogge{-}Solti and
+	Avigdor Gal and
+	Jan Mendling and
+	Avishai Mandelbaum},
+	title     = {The {ROAD} from Sensor Data to Process Instances via Interaction Mining},
+	booktitle = {Advanced Information Systems Engineering - 28th International Conference,
+	CAiSE 2016, Ljubljana, Slovenia, June 13-17, 2016. Proceedings},
+	pages     = {257--273},
+	year      = {2016},
+	crossref  = {DBLP:conf/caise/2016},
+	url       = {http://dx.doi.org/10.1007/978-3-319-39696-5\_16},
+	doi       = {10.1007/978-3-319-39696-5\_16},
+	timestamp = {Fri, 27 May 2016 12:10:17 +0200},
+	biburl    = {http://dblp.uni-trier.de/rec/bib/conf/caise/SenderovichRGMM16},
+	bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+@proceedings{DBLP:conf/caise/2016,
+	editor    = {Selmin Nurcan and
+	Pnina Soffer and
+	Marko Bajec and
+	Johann Eder},
+	title     = {Advanced Information Systems Engineering - 28th International Conference,
+	CAiSE 2016, Ljubljana, Slovenia, June 13-17, 2016. Proceedings},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {9694},
+	publisher = {Springer},
+	year      = {2016},
+	url       = {http://dx.doi.org/10.1007/978-3-319-39696-5},
+	doi       = {10.1007/978-3-319-39696-5},
+	isbn      = {978-3-319-39695-8},
+	timestamp = {Fri, 27 May 2016 12:05:06 +0200},
+	biburl    = {http://dblp.uni-trier.de/rec/bib/conf/caise/2016},
 	bibsource = {dblp computer science bibliography, http://dblp.org}
 }
