--- a/text/abstract.tex
+++ b/text/abstract.tex
@@ -3,5 +3,5 @@ To be done at the end.
 
 Insert your abstract here. Include keywords, PACS and mathematical
 subject classification numbers as needed.
-\keywords{First keyword \and Second keyword \and More}
+\keywords{process mining \and duplicate label \and natural language processing}
 \end{abstract} 
