--- a/text/introduction.tex
+++ b/text/introduction.tex
@@ -1,7 +1,10 @@
 \section{Introduction}
 \label{sec:intro}
-On a globalised market, organisations need to be efficient and effective at conducting their business processes. Business process management technologies like process mining help to relate operational execution data to business processes. Process mining allows us to discover models representing the observed behaviour, and helps us to gain insights into the performance of processes, and conformance to specified process models \cite{DBLP:books/sp/Aalst16}.
+On a globalised market, organisations need to be efficient and effective at conducting their business processes. Business process management technologies like process mining help to relate operational execution data to business processes~\cite{DBLP:books/daglib/0031128}. Process mining allows us to discover models representing the observed behaviour, and helps us to gain insights into the performance of processes, and conformance to specified process models \cite{DBLP:books/sp/Aalst16}.
 
-To establish a relation between execution data and process models is a complex and challenging research problem, and many aspects of this relationship have been studied. For example, Baier et al. investigate the challenge of a mismatch in abstraction levels~\cite{DBLP:journals/is/0001MW14},
+To establish the relation between execution data (e.g., in the form of event logs) and process models is a complex and challenging research problem, and many aspects of this relationship have been studied. For example, a challenge can be the mismatch in \emph{abstraction levels}~\cite{DBLP:journals/is/0001MW14} that has been approached by rule-based methods, by pattern-based approaches~\cite{DBLP:conf/bpm/MannhardtLRAT16}, or as optimisation problems~\cite{DBLP:conf/caise/SenderovichRGMM16} when dealing with sensor data. 
+In the broader category of relating activities and events, there is an interesting and often overlooked problem that recently received increasing attention~\cite{DBLP:conf/bpm/LuFBA16,DBLP:conf/bpm/PedroC16}: the problem that discovery techniques are not able to create duplicate activities (also duplicate tasks) in models \cite{DBLP:journals/topnoc/Carmona12}. This limitation can affect the understandability and precision of the discovered models, as it often leads to unnecessary loops with their associated control flow constructs and models that allow too much behaviour (e.g., with flower-model like structures in Petri nets).
 
-During execution of business processes---supported by the ubiquity of sensing technologies---large amounts of data can be generated. 
+The recent approaches tackling this problem provide means to distinguish events with the same label in event logs. The approach by Lu et al. algorithmically exploits the event context~\cite{DBLP:conf/bpm/LuFBA16}, and the approach by de San Pedro and Cortadella is based on gradual reduction of transition systems \cite{DBLP:conf/bpm/PedroC16}. These two methods will serve as the baselines.
+
+
