working on the intro

--- a/main.tex
+++ b/main.tex
@@ -82,17 +82,17 @@
 %Intro
 \input{text/introduction}
 
-\input{text/background}
+%\input{text/background}
 
 \input{text/related}
 
-\input{text/concept}
+%\input{text/concept}
 
-\input{text/evaluation}
+%\input{text/evaluation}
 
-\input{text/discussion}
+%\input{text/discussion}
 
-\input{text/conclusion}
+%\input{text/conclusion}
 
 
 %\begin{acknowledgements}
