--- a/refs.bib
+++ b/refs.bib
@@ -1,14 +1,11 @@
 @book{DBLP:books/daglib/0031128,
 	author    = {Marlon Dumas and
-	Marcello La Rosa and
+	Marcello {La Rosa} and
 	Jan Mendling and
 	Hajo A. Reijers},
 	title     = {Fundamentals of Business Process Management},
 	publisher = {Springer},
 	year      = {2013},
-	url       = {http://dx.doi.org/10.1007/978-3-642-33143-5},
-	doi       = {10.1007/978-3-642-33143-5},
-	isbn      = {978-3-642-33142-8},
 	timestamp = {Fri, 11 Dec 2015 18:49:34 +0100},
 	biburl    = {http://dblp.uni-trier.de/rec/bib/books/daglib/0031128},
 	bibsource = {dblp computer science bibliography, http://dblp.org}
@@ -19,8 +16,6 @@
   title     = {Process Mining - Data Science in Action, Second Edition},
   publisher = {Springer},
   year      = {2016},
-  url       = {http://dx.doi.org/10.1007/978-3-662-49851-4},
-  doi       = {10.1007/978-3-662-49851-4},
   isbn      = {978-3-662-49850-7},
   timestamp = {Mon, 18 Apr 2016 17:08:05 +0200},
   biburl    = {http://dblp.uni-trier.de/rec/bib/books/sp/Aalst16},
@@ -35,8 +30,6 @@
 	pages     = {1--23},
 	year      = {2012},
 	crossref  = {DBLP:journals/topnoc/2012-6},
-	url       = {http://dx.doi.org/10.1007/978-3-642-35179-2_1},
-	doi       = {10.1007/978-3-642-35179-2_1},
 	timestamp = {Fri, 11 Mar 2016 12:11:24 +0100},
 	biburl    = {http://dblp.uni-trier.de/rec/bib/journals/topnoc/Carmona12},
 	bibsource = {dblp computer science bibliography, http://dblp.org}
@@ -51,8 +44,6 @@
 	volume    = {46},
 	pages     = {123--139},
 	year      = {2014},
-	url       = {http://dx.doi.org/10.1016/j.is.2014.04.004},
-	doi       = {10.1016/j.is.2014.04.004},
 	timestamp = {Tue, 22 Jul 2014 13:16:49 +0200},
 	biburl    = {http://dblp.uni-trier.de/rec/bib/journals/is/0001MW14},
 	bibsource = {dblp computer science bibliography, http://dblp.org}
@@ -69,15 +60,13 @@
 	pages     = {90--107},
 	year      = {2016},
 	crossref  = {DBLP:conf/bpm/2016},
-	url       = {http://dx.doi.org/10.1007/978-3-319-45348-4\_6},
-	doi       = {10.1007/978-3-319-45348-4\_6},
 	timestamp = {Tue, 20 Sep 2016 09:39:38 +0200},
 	biburl    = {http://dblp.uni-trier.de/rec/bib/conf/bpm/LuFBA16},
 	bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 @proceedings{DBLP:conf/bpm/2016,
-	editor    = {Marcello La Rosa and
+	editor    = {Marcello {La Rosa} and
 	Peter Loos and
 	Oscar Pastor},
 	title     = {Business Process Management - 14th International Conference, {BPM}
@@ -86,8 +75,6 @@
 	volume    = {9850},
 	publisher = {Springer},
 	year      = {2016},
-	url       = {http://dx.doi.org/10.1007/978-3-319-45348-4},
-	doi       = {10.1007/978-3-319-45348-4},
 	isbn      = {978-3-319-45347-7},
 	timestamp = {Tue, 20 Sep 2016 09:34:17 +0200},
 	biburl    = {http://dblp.uni-trier.de/rec/bib/conf/bpm/2016},
@@ -104,8 +91,6 @@
 	pages     = {108--124},
 	year      = {2016},
 	crossref  = {DBLP:conf/bpm/2016},
-	url       = {http://dx.doi.org/10.1007/978-3-319-45348-4\_7},
-	doi       = {10.1007/978-3-319-45348-4\_7},
 	timestamp = {Tue, 20 Sep 2016 09:39:38 +0200},
 	biburl    = {http://dblp.uni-trier.de/rec/bib/conf/bpm/PedroC16},
 	bibsource = {dblp computer science bibliography, http://dblp.org}
@@ -123,8 +108,6 @@
 	pages     = {125--141},
 	year      = {2016},
 	crossref  = {DBLP:conf/bpm/2016},
-	url       = {http://dx.doi.org/10.1007/978-3-319-45348-4\_8},
-	doi       = {10.1007/978-3-319-45348-4\_8},
 	timestamp = {Tue, 20 Sep 2016 09:39:38 +0200},
 	biburl    = {http://dblp.uni-trier.de/rec/bib/conf/bpm/MannhardtLRAT16},
 	bibsource = {dblp computer science bibliography, http://dblp.org}
@@ -142,8 +125,6 @@
 	pages     = {257--273},
 	year      = {2016},
 	crossref  = {DBLP:conf/caise/2016},
-	url       = {http://dx.doi.org/10.1007/978-3-319-39696-5\_16},
-	doi       = {10.1007/978-3-319-39696-5\_16},
 	timestamp = {Fri, 27 May 2016 12:10:17 +0200},
 	biburl    = {http://dblp.uni-trier.de/rec/bib/conf/caise/SenderovichRGMM16},
 	bibsource = {dblp computer science bibliography, http://dblp.org}
@@ -159,10 +140,47 @@
 	volume    = {9694},
 	publisher = {Springer},
 	year      = {2016},
-	url       = {http://dx.doi.org/10.1007/978-3-319-39696-5},
-	doi       = {10.1007/978-3-319-39696-5},
 	isbn      = {978-3-319-39695-8},
 	timestamp = {Fri, 27 May 2016 12:05:06 +0200},
 	biburl    = {http://dblp.uni-trier.de/rec/bib/conf/caise/2016},
 	bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+
+@article{DBLP:journals/csur/Navigli09,
+	author    = {Roberto Navigli},
+	title     = {Word sense disambiguation: {A} survey},
+	journal   = {{ACM} Comput. Surv.},
+	volume    = {41},
+	number    = {2},
+	pages     = {10:1--10:69},
+	year      = {2009},
+	timestamp = {Mon, 09 Jan 2017 15:02:22 +0100},
+	biburl    = {http://dblp.uni-trier.de/rec/bib/journals/csur/Navigli09},
+	bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{tie2009clustering,
+	title={A clustering based method to solve duplicate tasks problem},
+	author={Tie-Jian, SONG Jin-Liang LUO and Wei, CHEN Su LIU},
+	journal={Journal of the Graduate School of the Chinese Academy of Sciences},
+	volume={1},
+	pages={016},
+	year={2009}
+}
+@inproceedings{iacobacci2016embeddings,
+	title={Embeddings for word sense disambiguation: An evaluation study},
+	author={Iacobacci, Ignacio and Pilehvar, Mohammad Taher and Navigli, Roberto},
+	booktitle={Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics},
+	volume={1},
+	pages={897--907},
+	year={2016}
+}
+@INPROCEEDINGS{XiaoHui2009alphaStartStar, 
+	author={W. XiaoHui and Z. WenQing and G. FengJuan}, 
+	booktitle={2009 International Conference on Research Challenges in Computer Science}, 
+	title={An Extended $\alpha$-Algorithm to Discovery Duplicate Tasks in Workflow Process Mining System}, 
+	year={2009}, 
+	pages={259-262}, 
+	keywords={algorithm theory;data mining;data structures;set theory;workflow management software;data structure;dependency relationship;discovery duplicate tasks;extended compdepend-algorithm;mining algorithm;sequence set;workflow mining technology;workflow process mining system;Algorithm design and analysis;Computer applications;Computer science;Data structures;Neural networks;Power system modeling;Software algorithms;Software engineering;Tellurium;Uncertainty;duplicate tasks;extended directed graph;sequence set;workflow mining}, 
+	doi={10.1109/ICRCCS.2009.73}, 
+	month={Dec},}
