--- a/text/introduction.tex
+++ b/text/introduction.tex
@@ -1,23 +1,22 @@
 \section{Introduction}
 \label{sec:intro}
-On a globalised market, organisations need to be efficient and effective at conducting their business processes. Business process management technologies like process mining help to relate operational execution data to business processes~\cite{DBLP:books/daglib/0031128}. Process mining allows us to discover models representing the observed behaviour, and helps us to gain insights into the performance of processes, and conformance to specified process models \cite{DBLP:books/sp/Aalst16}.
+On a globalised market, the efficient and effective execution of business processes is essential for organisations. Business process management technologies like process mining help to relate operational execution data to business processes~\cite{DBLP:books/daglib/0031128}. Process mining through the discovery of process models, i.e.\ abstract representation of the observed behaviour, helps us to gain insights about the performance of the process and it conformance to some expected behaviour~\cite{DBLP:books/sp/Aalst16}.
 
-To establish the relation between execution data (e.g., in the form of event logs) and process models is a complex and challenging research problem, and many aspects of this relationship have been studied. For example, a challenge can be the mismatch in \emph{abstraction levels}~\cite{DBLP:journals/is/0001MW14} that has been approached by rule-based methods, by pattern-based approaches~\cite{DBLP:conf/bpm/MannhardtLRAT16}, or as optimisation problems~\cite{DBLP:conf/caise/SenderovichRGMM16} when dealing with sensor data. 
-In the broader category of relating activities and events, there is an interesting and often overlooked problem that recently received increasing attention~\cite{DBLP:conf/bpm/LuFBA16,DBLP:conf/bpm/PedroC16}: the problem that discovery techniques are not able to create duplicate activities (also duplicate tasks) in models \cite{DBLP:journals/topnoc/Carmona12,tie2009clustering,XiaoHui2009alphaStartStar}. This limitation can affect the understandability and precision of the discovered models, as it often leads to unnecessary loops with their associated control flow constructs and models that allow too much behaviour (e.g., with flower-model like structures in Petri nets).
-The recent approaches tackling this problem provide means to distinguish events with the same label in event logs. The approach by Lu et al. algorithmically exploits the event context~\cite{DBLP:conf/bpm/LuFBA16}, and the approach by de San Pedro and Cortadella is based on gradual reduction of transition systems \cite{DBLP:conf/bpm/PedroC16}. These two methods describe tailored algorithms for the task of separating events of equal labels to allow duplicate tasks in discovered models.
+Establishing the relation between execution data (e.g., in the form of event logs) and process models is a complex and challenging research problem, and many aspects of this relationship have been studied. For example, the mismatch in the \emph{abstraction levels}~\cite{DBLP:journals/is/0001MW14} between activities of a model and events in a log is a challenge that has been tackled through the use of pattern-based approaches~\cite{DBLP:conf/bpm/MannhardtLRAT16}, or as optimisation problems~\cite{DBLP:conf/caise/SenderovichRGMM16}.% when dealing with sensor data. 
+When considering the relation between activities and events, discovery techniques are not able to create duplicate activities (also duplicate tasks) in models \cite{DBLP:journals/topnoc/Carmona12,tie2009clustering,XiaoHui2009alphaStartStar}. This interesting and often overlooked problem only recently received increasing attention by the research community~\cite{DBLP:conf/bpm/LuFBA16,DBLP:conf/bpm/PedroC16}. This limitation can affect the understandability and precision of discovered models, as it often leads to over-complicated process models with unnecessary loops allowing too much behaviour (e.g., with flower-model like structures in Petri nets).
+The recent approaches tackling this problem provide means to distinguish events with the same label in event logs. The approach by Lu et al.~\cite{DBLP:conf/bpm/LuFBA16} algorithmically exploits the event context, and the approach by de San Pedro and Cortadella~\cite{DBLP:conf/bpm/PedroC16} is based on gradual reduction of transition systems. These two methods describe tailored algorithms for the task of separating events of equal labels to allow duplicate tasks in discovered models.
 
-In contrast, to an algorithmic approach, we investigate how the research achievements in the field of natural language processing can be translated to the this particular problem in the field of process mining.
-More precicely, we consider the event label disambiguation as special instance to the problem of word sense disambiguation (WSD)~\cite{DBLP:journals/csur/Navigli09}. WSD is one of the oldest problems in natural language processing and artificial intelligence~\cite{article_from_50s}. 
-Navigli defines the problem as "word sense disambiguation is the ability to computationally determine which sense of a word is activated by its use in a particular context"~\cite{DBLP:journals/csur/Navigli09}. 
+In contrast, to an algorithmic approach, in this work we investigate how the research achievements in the field of natural language processing can be adapted to the address the problem of identifying duplicate activities in the field of process mining.
+More precisely, we consider event label disambiguation as a special instance of the word sense disambiguation (WSD) problem~\cite{DBLP:journals/csur/Navigli09}. WSD is one of the oldest problems in natural language processing and artificial intelligence~\cite{article_from_50s}, and Navigli defines it as "the ability to computationally determine which sense of a word is activated by its use in a particular context"~\cite{DBLP:journals/csur/Navigli09}. 
 
-The WSD problem has received considerable attention by academics and industry in the recent years and sophisticated techniques exist. These broader categories of approaches can be distinguished: knowledge-based, (semi-)supervised, and unsupervised approaches \cite{DBLP:journals/csur/Navigli09}. Although supervised techniques achieve the best results for WSD~\cite{iacobacci2016embeddings}, they cannot be applied to the process mining field, as there are no annotated corpora for event labels. Therefore, we investigate unsupervised methods in this paper and show how these can be applied to the problem at hand. 
+In the recent years, the WSD problem has received considerable attention by academics and industry resulting in the development of several approaches. In general we can divide those approaches in three categories: knowledge-based, (semi-)supervised, and unsupervised~\cite{DBLP:journals/csur/Navigli09}. Although supervised approaches achieve the best results~\cite{iacobacci2016embeddings}, they cannot be applied to the field of process mining, as there are no annotated corpora for event labels. Therefore, in this paper we investigate unsupervised methods and we show how these can be applied to the problem at hand. 
 
 %By WSD, it becomes possible to understand the two separate meanings of \emph{bank} in the phrase "Yesterday, I went to the bank to cancel my account, which exhausted me, so I sat down on a bank in the park."
 
 The contributions of this paper are threefold:
 \begin{itemize}
-	\item it demonstrates that the process mining problem of duplicate tasks is an instance of the natural language problem of word sense disambiguation.
-	\item it present a general approach that transforms event labels into textual corpora, such that duplicate task disambiguation.
+	\item it demonstrates that the process mining problem of duplicate activities is an instance of the natural language problem of word sense disambiguation.
+	\item it presents a general approach to transform event labels into textual corpora, such that duplicate task disambiguation.
 	\item it presents an extensive evaluation of duplicate task detection methods with a repository of process models, and existing benchmark event logs.
 \end{itemize}
 
