related work + author list

--- a/text/introduction.tex
+++ b/text/introduction.tex
@@ -6,7 +6,7 @@ Establishing the relation between execution data (e.g., in the form of event log
 When considering the relation between activities and events, discovery techniques are not able to create duplicate activities (also duplicate tasks) in models \cite{DBLP:journals/topnoc/Carmona12,tie2009clustering,XiaoHui2009alphaStartStar}. This interesting and often overlooked problem only recently received increasing attention by the research community~\cite{DBLP:conf/bpm/LuFBA16,DBLP:conf/bpm/PedroC16}. This limitation can affect the understandability and precision of discovered models, as it often leads to over-complicated process models with unnecessary loops allowing too much behaviour (e.g., with flower-model like structures in Petri nets).
 The recent approaches tackling this problem provide means to distinguish events with the same label in event logs. The approach by Lu et al.~\cite{DBLP:conf/bpm/LuFBA16} algorithmically exploits the event context, and the approach by de San Pedro and Cortadella~\cite{DBLP:conf/bpm/PedroC16} is based on gradual reduction of transition systems. These two methods describe tailored algorithms for the task of separating events of equal labels to allow duplicate tasks in discovered models.
 
-In contrast, to an algorithmic approach, in this work we investigate how the research achievements in the field of natural language processing can be adapted to the address the problem of identifying duplicate activities in the field of process mining.
+In contrast to an algorithmic approach, in this work we investigate how the research achievements in the field of natural language processing can be adapted to the address the problem of identifying duplicate activities in the field of process mining.
 More precisely, we consider event label disambiguation as a special instance of the word sense disambiguation (WSD) problem~\cite{DBLP:journals/csur/Navigli09}. WSD is one of the oldest problems in natural language processing and artificial intelligence~\cite{article_from_50s}, and Navigli defines it as "the ability to computationally determine which sense of a word is activated by its use in a particular context"~\cite{DBLP:journals/csur/Navigli09}. 
 
 In the recent years, the WSD problem has received considerable attention by academics and industry resulting in the development of several approaches. In general we can divide those approaches in three categories: knowledge-based, (semi-)supervised, and unsupervised~\cite{DBLP:journals/csur/Navigli09}. Although supervised approaches achieve the best results~\cite{iacobacci2016embeddings}, they cannot be applied to the field of process mining, as there are no annotated corpora for event labels. Therefore, in this paper we investigate unsupervised methods and we show how these can be applied to the problem at hand. 
