--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,7 @@
 %
 \begin{document}
 
-\title{Duplicate Label Disambiguation in Process Mining
+\title{Duplicate Label Induction in Process Mining
 %\thanks{Grants or other notes
 %about the article that should go on the front page should be
 %placed here. General acknowledgments should be placed at the end of the article.}
@@ -54,21 +54,27 @@
 
 %\titlerunning{Short form of title}        % if too long for running head
 
-\author{First Author         \and
-        Second Author %etc.
+\author{{Raffaele Conforti} \and
+	{Andreas Solti} \and
+	{Sander~J.J.~Leemans} \and
+	{Marcello {La Rosa}} \and
+	{Jan Mendling}
 }
 
 %\authorrunning{Short form of author list} % if too long for running head
 
-\institute{F. Author \at
-              first address \\
-              Tel.: +123-45-678910\\
-              Fax: +123-45-678910\\
-              \email{fauthor@example.com}           %  \\
+\institute{Raffaele Conforti \and Sander J. J. Leemans \and Marcello La Rosa \at
+              Queensland University of Technology, 
+              2 George St, Brisbane City QLD 4000, Australia\\
+              Tel.: +61-7-3138-0462\\
+             % Fax: +123-45-678910\\
+             E-mails: {raffaele.conforti@qut.edu.au}, {sander.leemans@qut.edu.au}, {m.larosa@qut.edu.au}           %  \\
 %             \emph{Present address:} of F. Author  %  if needed
            \and
-           S. Author \at
-              second address
+           Andreas Solti \and Jan Mendling \at
+              Vienna University of Economics and Business, Welthandelsplatz 1, 1020 Vienna, Austria \\
+              Tel.: +43-1-31336-4753\\
+             E-mails: {solti@ai.wu.ac.at}, {jan.mendling@wu.ac.at}
 }
 
 \date{Received: date / Accepted: date}
