--- a/main.tex
+++ b/main.tex
@@ -54,8 +54,8 @@
 
 %\titlerunning{Short form of title}        % if too long for running head
 
-\author{{Raffaele Conforti} \and
-	{Andreas Solti} \and
+\author{{Andreas Solti} \and
+	{Raffaele Conforti} \and
 	{Sander~J.J.~Leemans} \and
 	{Marcello {La Rosa}} \and
 	{Jan Mendling}
