--- a/text/introduction.tex
+++ b/text/introduction.tex
@@ -15,7 +15,9 @@ In the recent years, the WSD problem has received considerable attention by acad
 
 The contributions of this paper are threefold:
 \begin{itemize}
-	\item it demonstrates that the process mining problem of duplicate activities is an instance of the natural language problem of word sense disambiguation.
+	\item it relates the label splitting problem in process mining to the problem of word sense induction in  of natural language processing.
+	\item it presents a flexible and general clustering-based approach to solve the label splitting problem
+	\item it shows how to train a model that 
 	\item it presents a general approach to transform event labels into textual corpora, such that duplicate task disambiguation.
 	\item it presents an extensive evaluation of duplicate task detection methods with a repository of process models, and existing benchmark event logs.
 \end{itemize}
