a little bit of evaluation

--- a/main.tex
+++ b/main.tex
@@ -94,9 +94,9 @@
 
 %\input{text/concept}
 
-%\input{text/evaluation}
+\input{text/evaluation}
 
-%\input{text/discussion}
+\input{text/discussion}
 
 %\input{text/conclusion}
 
