--- a/refs.bib
+++ b/refs.bib
@@ -29,7 +29,6 @@
 	volume    = {6},
 	pages     = {1--23},
 	year      = {2012},
-	crossref  = {DBLP:journals/topnoc/2012-6},
 	timestamp = {Fri, 11 Mar 2016 12:11:24 +0100},
 	biburl    = {http://dblp.uni-trier.de/rec/bib/journals/topnoc/Carmona12},
 	bibsource = {dblp computer science bibliography, http://dblp.org}
@@ -174,6 +173,20 @@
 	volume={1},
 	pages={897--907},
 	year={2016}
+}
+@inproceedings{DBLP:conf/bpm/DongenCC16,
+	author    = {Boudewijn F. van Dongen and
+	Josep Carmona and
+	Thomas Chatain},
+	title     = {A Unified Approach for Measuring Precision and Generalization Based
+	on Anti-alignments},
+	booktitle = {Business Process Management - 14th International Conference, {BPM}
+	2016, Rio de Janeiro, Brazil, September 18-22, 2016. Proceedings},
+	pages     = {39--56},
+	year      = {2016},
+	timestamp = {Thu, 15 Jun 2017 21:44:09 +0200},
+	biburl    = {http://dblp.uni-trier.de/rec/bib/conf/bpm/DongenCC16},
+	bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 @INPROCEEDINGS{XiaoHui2009alphaStartStar, 
 	author={W. XiaoHui and Z. WenQing and G. FengJuan}, 
