--- a/text/discussion.tex
+++ b/text/discussion.tex
@@ -1,4 +1,4 @@
 \section{Discussion}
 \label{sec:discuss}
 
-\lipsum[4]
+Imprecise precision measures. \todo{Maybe we can try the "Precision based on anti-alignments" \cite{DBLP:conf/bpm/DongenCC16}}?
