--- a/text/evaluation.tex
+++ b/text/evaluation.tex
@@ -1,4 +1,24 @@
 \section{Evaluation}
 \label{sec:evaluation}
 
-\lipsum[3]
+\subsection{Baseline Methods}
+\subsubsection{Xixi's methods}
+
+\subsubsection{DeSanPedro and Cortadella}
+
+\subsubsection{Fodina}
+
+
+\subsection{Experiment Setup}
+
+\todo{Andreas: add nice figure and explain it}
+\begin{itemize}
+	\item Apply different deduplication techniques to collect logs
+	\item Apply different miners to deduplicated logs to generate models
+	\item Compute fitness and precision of each model and compare aggregates
+\end{itemize}
+
+\subsection{Experimental Results}
+\todo{Andreas: first part on creation of logs and times taken / memory taken}
+\todo{Raffaele: second part on applying different miners and computing fitness/precision}
+
