--- a/text/evaluation.tex
+++ b/text/evaluation.tex
@@ -3,10 +3,13 @@
 
 \subsection{Baseline Methods}
 \subsubsection{Xixi's methods}
+\todo{Sander?}
 
 \subsubsection{DeSanPedro and Cortadella}
+\todo{Andreas - or Raffaele?}
 
 \subsubsection{Fodina}
+\todo{Andreas}
 
 
 \subsection{Experiment Setup}
