--- a/refs.bib
+++ b/refs.bib
@@ -174,6 +174,17 @@
 	pages={897--907},
 	year={2016}
 }
+
+@inproceedings{biemann2006chinese,
+	title={Chinese whispers: an efficient graph clustering algorithm and its application to natural language processing problems},
+	author={Biemann, Chris},
+	booktitle={Proceedings of the first workshop on graph based methods for natural language processing},
+	pages={73--80},
+	year={2006},
+	organization={Association for Computational Linguistics}
+}
+
+
 @inproceedings{DBLP:conf/bpm/DongenCC16,
 	author    = {Boudewijn F. van Dongen and
 	Josep Carmona and
